# fasttext-community

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  download_model.py  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-test.yml  release.yml
crawl/: dedup.cc  download_crawl.sh
docs/: crawl-vectors.md  python-module.md  support.md
python/: README.md  README.rst
python/fasttext_module/fasttext/pybind/: fasttext_pybind.cc
python/fasttext_module/fasttext/tests/: helpers.py  test_script.py
python/fasttext_module/fasttext/tests/util/: test_util.py
python/fasttext_module/fasttext/util/: __init__.py  constants.py  util.py
src/: args.cc  densematrix.cc  densematrix.h  dictionary.cc  fasttext.cc  loss.cc  main.cc  meter.cc  meter.h  productquantizer.cc  vector.h
