[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"


[project]
name = "fasttext-community"
version = "0.10.7"
description = "fasttext Python bindings"
readme = { file = "python/README.rst", content-type = "text/x-rst" }
requires-python = ">=3.6"
license = "MIT"  # SPDX string
license-files = ["LICENSE"]

authors = [
    { name = "Nurzhan Muratkhan", email = "nurzhanmuratkhan@gmail.com" }
]
urls = { "Homepage" = "https://github.com/munlicode/fasttext-community" }
dependencies = ["pybind11>=2.2", "setuptools>=0.7.0", "numpy"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "build", "twine"]

[tool.setuptools.packages.find]
where = ["python/fasttext_module"]