[build-system]
requires = ["setuptools>=80", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"


[project]
name = "fasttext-community"
version = "0.11.1"
description = "fasttext Python bindings"
readme = { file = "python/README.rst", content-type = "text/x-rst" }
requires-python = ">=3.9, <3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Onur Celebi", email = "celebio@fb.com" },
    { name = "Nurzhan Muratkhan", email = "nurzhanmuratkhan@gmail.com" }
]
dependencies = [
    "numpy",
    "pybind11>=2.2",
]


classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]


[project.urls]
Homepage = "https://github.com/munlicode/fasttext-community"
"Bug Tracker" = "https://github.com/munlicode/fasttext-community/issues"
"Source Code" = "https://github.com/munlicode/fasttext-community"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "build", "twine", "cibuildwheel"]

[tool.setuptools.packages.find]
where = ["python/fasttext_module"]
